--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
-  "name": "gatsby-ecommerce-theme",
-  "version": "1.0.0",
-  "private": true,
-  "description": "An e-commerce theme designed by Matter Design for Netlify.",
-  "author": "Matter Design",
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "velocity",
+  "description": "A highly customizable tabbed proxy for evading internet censorship.",
+  "version": "1.2.0-beta",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop -p 5000",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "format": "prettier --write \"{gatsby-*.js,src/**/*.js}\"",
-    "plop": "plop"
+    "dev": "concurrently \"solid-start dev --host\" \"bare-server-node --host=localhost --port=8080\"",
+    "build": "solid-start build",
+    "start": "node scripts/server.js"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@types/prismjs": "^1.26.0",
+    "autoprefixer": "^10.4.12",
+    "concurrently": "^7.6.0",
+    "postcss": "^8.4.18",
+    "solid-start-node": "^0.2.0",
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vite-plugin-static-copy": "^0.13.0"
   },
   "dependencies": {
-    "@netlify/plugin-gatsby": "^3.6.0",
-    "cypress": "^10.0.3",
-    "gatsby": "^4.5.4",
-    "gatsby-plugin-manifest": "^4.14.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-helmet": "^6.1.0",
-    "react-slick": "^0.29.0"
+    "@miftikcz/uptimer": "^1.0.0",
+    "@solidjs/meta": "^0.28.0",
+    "@solidjs/router": "^0.6.0",
+    "@thisbeyond/solid-dnd": "^0.7.3",
+    "@titaniumnetwork-dev/ultraviolet": "^1.0.8-beta",
+    "@tomphttp/bare-client": "^1.1.2-beta.3",
+    "@tomphttp/bare-server-node": "^1.2.3",
+    "express": "^4.18.2",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
+    "solid-js": "^1.6.2",
+    "solid-start": "^0.2.0"
   },
-  "devDependencies": {
-    "gatsby-plugin-netlify": "^5.0.0",
-    "netlify-plugin-cypress": "~2.2.0",
-    "plop": "^3.0.5",
-    "prettier": "^2.6.2"
+  "engines": {
+    "node": ">=18"
   }
 }
